@@ -9,7 +9,7 @@ feel free to suggest features, contribute, or comment.
 
 0.9.0
 
-* Nested alias [AS GOOD AS DONE]
+* Nested alias [DONE]
 * Import of Mud Connectfiles [DONE]
 * Save logfiles of mud-traffic [DONE]
 * Rewrite connection wizard step 1 [DONE]
