@@ -15,6 +15,7 @@ GNOME-Mud 0.9.0 (UNRELEASED)
   when connected to certain MUDs.
 - Fixed the MCCP segfault, hopefully.
 - Translation updates.
+- Nested alias now works, with a maximum depth of 5
 
 GNOME-Mud 0.8.0 (08/11/2001)
 
